--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -1,5 +1,12 @@
-html, body, #app {
-    height: 100%;
+html, body {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
+#app {
+    min-height: 100vh;
     width: 100%;
     margin: 0;
     padding: 0;
